project(GameServer)
set(SRC
    libs/minINI/minIni.c
    src/actorAction.cpp
    src/AuthServerUtil.cpp
    src/banedropship.cpp
    src/behaviorController.cpp
    src/behaviorControllerInit.cpp
    src/Bignum.cpp
    src/cellMgr.cpp
    src/CharacterMgr.cpp
    src/communicator.cpp
    src/controlpoint.cpp
    src/creature.cpp
    src/DataInterface.cpp
    src/DataInterface_Character.cpp
    src/DataInterface_Creature.cpp
    src/DataInterface_Items.cpp
    src/DataInterface_Mission.cpp
    src/DataInterface_NPC.cpp
    src/DataInterface_SpawnSystem.cpp
    src/DataInterface_Teleporter.cpp
    src/defaultObject.cpp
    src/DetourAlloc.cpp
    src/DetourCommon.cpp
    src/DetourNavMesh.cpp
    src/DetourNavMeshBuilder.cpp
    src/DetourNavMeshQuery.cpp
    src/DetourNode.cpp
    src/dynamicObject.cpp
    src/entityMgr.cpp
    src/fileMgr.cpp
    src/gameData.cpp
    src/gameEffects.cpp
    src/GameMain.cpp
    src/gm.cpp
    src/hashTable.cpp
    src/hashTableSynced.cpp
    src/humandropship.cpp
    src/INIParser.cpp
    src/inventory.cpp
    src/logosObject.cpp
    src/lootdispenser.cpp
    src/main.cpp
    src/manifestation.cpp
    src/MapChannel.cpp
    src/MD5.cpp
    src/missile.cpp
    src/mission.cpp
    src/navmesh.cpp
    src/netMgr.cpp
    src/npc.cpp
    src/playerActions.cpp
    src/PyMarshal.cpp
    src/sData.cpp
    src/spawnSystem.cpp
    src/TabulaCrypt2.cpp
    src/teleporter.cpp
    src/ThreadsUtils.cpp
    src/UnpackObjects.cpp
    src/vendor.cpp
    src/waypoint.cpp
    src/wormhole.cpp
)
set(additional_files
    config.ini
    libmysql.dll
    libs/mysql/libmysql.def
    libs/mysql/libmysql.pdb
    libs/mysql/mysqlclient.pdb
    libs/mysql/mysys.pdb
    libs/mysql/regex.pdb
    libs/mysql/strings.pdb
    libs/mysql/zlib.pdb
    pthreadVC2.dll
    sql/abilities.sql
    sql/characters.sql
    sql/inventory.sql
    sql/ir_gameserver.sql
    sql/skills.sql
    sql/Spawnpool_V0.1.sql
    sql/tabuladb.sql
    )
  set(header_FILES
    libs/minINI/minGlue.h
    libs/minINI/minIni.h
    libs/mysql/base64.h
    libs/mysql/config-netware.h
    libs/mysql/config-win.h
    libs/mysql/decimal.h
    libs/mysql/errmsg.h
    libs/mysql/ft_global.h
    libs/mysql/hash.h
    libs/mysql/heap.h
    libs/mysql/help_end.h
    libs/mysql/help_start.h
    libs/mysql/keycache.h
    libs/mysql/myisam.h
    libs/mysql/myisammrg.h
    libs/mysql/myisampack.h
    libs/mysql/mysql.h
    libs/mysql/mysqld_ername.h
    libs/mysql/mysqld_error.h
    libs/mysql/mysql_com.h
    libs/mysql/mysql_embed.h
    libs/mysql/mysql_time.h
    libs/mysql/mysql_version.h
    libs/mysql/mysys_err.h
    libs/mysql/my_aes.h
    libs/mysql/my_alarm.h
    libs/mysql/my_alloc.h
    libs/mysql/my_atomic.h
    libs/mysql/my_attribute.h
    libs/mysql/my_base.h
    libs/mysql/my_bit.h
    libs/mysql/my_bitmap.h
    libs/mysql/my_dbug.h
    libs/mysql/my_dir.h
    libs/mysql/my_getopt.h
    libs/mysql/my_global.h
    libs/mysql/my_handler.h
    libs/mysql/my_libwrap.h
    libs/mysql/my_list.h
    libs/mysql/my_md5.h
    libs/mysql/my_net.h
    libs/mysql/my_nosys.h
    libs/mysql/my_no_pthread.h
    libs/mysql/my_pthread.h
    libs/mysql/my_stacktrace.h
    libs/mysql/my_sys.h
    libs/mysql/my_time.h
    libs/mysql/my_tree.h
    libs/mysql/my_trie.h
    libs/mysql/my_uctype.h
    libs/mysql/my_user.h
    libs/mysql/my_vle.h
    libs/mysql/my_xml.h
    libs/mysql/m_ctype.h
    libs/mysql/m_string.h
    libs/mysql/queues.h
    libs/mysql/rijndael.h
    libs/mysql/sha1.h
    libs/mysql/sql_common.h
    libs/mysql/sql_state.h
    libs/mysql/sslopt-case.h
    libs/mysql/sslopt-longopts.h
    libs/mysql/sslopt-vars.h
    libs/mysql/thr_alarm.h
    libs/mysql/thr_lock.h
    libs/mysql/typelib.h
    libs/mysql/t_ctype.h
    libs/mysql/violite.h
    libs/pthreads/pthread.h
    libs/pthreads/sched.h
    libs/pthreads/semaphore.h
    resource.h
    src/actor.h
    src/AuthServerUtil.h
    src/banedropship.h
    src/behaviorController.h
    src/Bignum.h
    src/cellMgr.h
    src/classIDs.h
    src/combatMgr.h
    src/communicator.h
    src/controlpoint.h
    src/creature.h
    src/DataInterface.h
    src/defaultObject.h
    src/DetourAlloc.h
    src/DetourAssert.h
    src/DetourCommon.h
    src/DetourNavMesh.h
    src/DetourNavMeshBuilder.h
    src/DetourNavMeshQuery.h
    src/DetourNode.h
    src/DetourStatus.h
    src/dynamicObject.h
    src/entityIDs.h
    src/entityMgr.h
    src/fileMgr.h
    src/framework.h
    src/gameData.h
    src/gameEffects.h
    src/GameMain.h
    src/Global.h
    src/gm.h
    src/hashTable.h
    src/humandropship.h
    src/INIParser.h
    src/inventory.h
    src/logosObject.h
    src/lootdispenser.h
    src/main.h
    src/manifestation.h
    src/MapChannel.h
    src/MapInstance.h
    src/methodIDs.h
    src/mission.h
    src/Msg.h
    src/navmesh.h
    src/npc.h
    src/Packet.h
    src/Packing.h
    src/sData.h
    src/spawnSystem.h
    src/TabulaCrypt.h
    src/teleporter.h
    src/ThreadsUtils.h
    src/vendor.h
    src/waypoint.h
    src/wormhole.h
  )
  set(rc_FILES
    TabulaGameServer.rc
  )
  set(ico_FILES
    src/icon_r.ico
  )
  
#  <ItemGroup>
 #   <Library Include="libs/mysql/libmysql.lib
  #  <Library Include="libs/mysql/mysqlclient.lib
   # <Library Include="libs/mysql/mysys.lib
    #<Library Include="libs/mysql/regex.lib
    #<Library Include="libs/mysql/strings.lib
    #<Library Include="libs/mysql/zlib.lib
    #<Library Include="libs/pthreads/pthreadVC2.lib
  #</ItemGroup>
  set(gameData_FILES
    gameData/class.txt
    gameData/ClassDescriptions.txt
    gameData/equipableClassEquipmentSlot.txt
    gameData/GameServerLoginSequence.txt
    gameData/itemTemplates.txt
    gameData/logos.txt
    gameData/mapInfo.txt
    gameData/starterItemTemplateClassIds.txt
    gameData/TabulaRasaPacketFormat.txt
  )
add_executable(infini_server ${SRC})
  target_link_libraries(infini_server mysql)
